<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">jdvpl</string>
    <string name="title_activity_home" tools:ignore="MissingTranslation">JDVPL</string>
    <string name="navigation_drawer_open" tools:ignore="MissingTranslation">Open navigation drawer</string>
    <string name="navigation_drawer_close" tools:ignore="MissingTranslation">Close navigation drawer</string>
    <string name="nav_header_title" tools:ignore="MissingTranslation">Android Studio</string>
    <string name="nav_header_subtitle" tools:ignore="MissingTranslation">android.studio@android.com</string>
    <string name="nav_header_desc" tools:ignore="MissingTranslation">Navigation header</string>
    <string name="action_settings" tools:ignore="MissingTranslation">Settings</string>
    <string name="title_activity_inicio" tools:ignore="MissingTranslation">Inicio</string>
    <string name="title_activity_html5scroll" tools:ignore="MissingTranslation">HTML5</string>
    <string name="title_activity_html5scrollacti" tools:ignore="MissingTranslation">HTML5</string>
    <string name="title_activity_scrolling_css3" tools:ignore="MissingTranslation">ScrollingCss3</string>
    <string name="title_activity_scrolling_bootstrap" tools:ignore="MissingTranslation">ScrollingBootstrap</string>
    <string name="title_activity_scrolling_mysql" tools:ignore="MissingTranslation">ScrollingMysql</string>
    <string name="title_activity_scrolling_php" tools:ignore="MissingTranslation">ScrollingPHP</string>
    <string name="title_activity_contacto" tools:ignore="MissingTranslation">contacto</string>
    <string name="download" tools:ignore="MissingTranslation">descargar pdf</string>
    <string name="title_activity_cursos" tools:ignore="MissingTranslation">cursos</string>
    <string name="title_activity_cursosjdvpl" tools:ignore="MissingTranslation">cursosjdvpl</string>
    <string name="title_activity_inicio2" tools:ignore="MissingTranslation">Selecciona tu Curso</string>
    <string name="como_vemos_en_la_imagen_podemos_incrustar_eqtiquetas_de_html5_dentro_de_php_debemos_tener_en_cuenta_que_las_etiquetas_de_php_siempre_comienzan_con_php_y_cierran_con_aqui_colocamos_un_texto_hola_mundo_pero_para_poderlo_imprimir_debe_ser_con_la_funcion_echo_ademas_se_tiene_en_cuenta_que_se_puede_dar_estilo_mediante_bootstrap_y_ccs3" tools:ignore="MissingTranslation">Como vemos en la imagen podemos incrustar eqtiquetas de html5 dentro de php, debemos tener en cuenta que las etiquetas de php siempre comienzan con ?php y cierran con ?. aqui colocamos un texto hola mundo pero para poderlo imprimir debe ser con la funcion echo ademas se tiene en cuenta que se puede dar estilo mediante bootstrap y ccs3.</string>
    <string name="title_activity_pop" tools:ignore="MissingTranslation">retroalimentacion</string>
    <string name="facebook_application_id" translatable="false">2223250087798400</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2223250087798400</string>
    <string name="idioma">Idioma</string>
    <string name="no_estas_inscrito_reg_strate">No estas inscrito regístrate!!</string>
    <string name="correo">Correo</string>
    <string name="contraseña">Contraseña</string>
    <string name="inicio_de_sesion">inicio de sesion</string>
    <string name="apellido">Apellido</string>
    <string name="correo1">Correo</string>
    <string name="contraseña1">Contraseña</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="registrar">registrar</string>
    <string name="ya_tengo_cuenta">YA TENGO CUENTA!</string>
    <string name="cursos">Cursos</string>
    <string name="videos">Videos</string>
    <string name="material">Material</string>
    <string name="retroalimentacion">Retroalimentacion</string>
    <string name="diviertete">Diviertete</string>
    <string name="contacto">Contacto</string>
    <string name="manual_de_usuario">Manual de Usuario</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="Inicio">Inicio</string>
    <string name="Inicio2">Selecciona tu curso</string>
    <string name="html5">HTML5</string>
    <string name="maquetaci_n_de_sitios_web">Maquetación de sitios web</string>
    <string name="todo_en_dise_o_y_estilos">Todo en diseño y estilos</string>
    <string name="framework_dise_ado_para_sitios_web">Framework diseñado para sitios web</string>
    <string name="contenido_web_din_mico">Contenido web dinámico</string>
    <string name="el_mejor_gestor_de_base_de_datos">El mejor gestor de base de datos</string>
    <string name="qu_es_html5">¿Qué es HTML5?</string>
    <string name="html5_es_un_lenguaje_markup_de_hecho_las_siglas_de_html_significan_hyper_text_markup_language_usado_para_estructurar_y_presentar_el_contenido_para_la_web_es_uno_de_los_aspectos_fundamentales_para_el_funcionamiento_de_los_sitios_pero_no_es_el_primero_es_de_hecho_la_quinta_revisi_n_del_est_ndar_que_fue_creado_en_1990">HTML5 es un lenguaje markup (de hecho, las siglas de HTML significan Hyper Text Markup Language) usado para estructurar y presentar el contenido para la web. Es uno de los aspectos fundamentales para el funcionamiento de los sitios, pero no es el primero. Es de hecho la quinta revisión del estándar que fue creado en 1990.</string>
    <string name="ht1">¿Que es el doctype?</string>
    <string name="htx1">El Doctype o “Declaración del tipo de documento” es una instrucción especial que va al inicio de nuestro documento HTML y que permite al navegador entender qué versión de HTML estamos utilizando.</string>
    <string name="h2">Etiqueta HTML meta</string>
    <string name="ht2">Las etiquetas meta o meta tags encabezan un documento HTML y suministran información codificada a navegadores y motores de búsqueda sobre una página web.</string>
    <string name="h3">Header</string>
    <string name="ht3">Es una etiqueta nueva (de html5) y permite definir cabeceras dentro de una página. En realidad pueden existir varias cabeceras, 1 la principal de la página donde se ubicara la navegación, logotipo, h1, etc.</string>
    <string name="h4">Nav</string>
    <string name="ht4">Se usa para marcar una zona de enlaces como puede ser el menú principal, o los del sidebar (laterales) o del footer. Podemos tener un nav dentro de header, footer, section, y article</string>
    <string name="h5">Section</string>
    <string name="ht5">Es otro elemento nuevo de HTML5 y se ha creado sobre todo para evitar el uso excesivo de divs. Se debe usar para dividir un documento en diferentes secciones como por ejemplo una sección de noticias y otra de productos que a su vez está separado en header, div y footer</string>
    <string name="ht6">Es un elemento clásico y se debe usar para agrupar contenido en bloques o capas y poder aplicarle un estilo o una ubicación a todo el conjunto, por ejemplo si queremos que este alineado a la derecha.</string>
    <string name="ht7">Los articles son bloques de información, como si fuesen entradas de un blog, pero no tienen que ser noticias, pueden ser servicios, productos, enlaces con otras páginas, etc. La idea es que dentro de 1 sectión haya diferentes articles, agrupados por que así tiene más lógica.</string>
    <string name="ht8">En ocasiones cuando en una página estamos hablando sobre un tema, surge la necesidad de aclarar algo que no está directamente relacionado con el resto, para eso debe usarse esta etiqueta.Habitualmente se usa para establecer los sidebars laterales, que son contenido más general</string>
    <string name="ht9">Se usa para marcar un formulario. Las funcionalidades de los formularios en HTML5 brindan una experiencia mejor para los usuarios al permitir que los formularios tengan un comportamiento más consistente entre diferentes sitios web y al darle una devolución inmediata acerca de la información ingresada</string>
    <string name="ht10">Si tenemos imágenes con título, descripción, copyright, etc. Debemos agrupar todo el contenido relacionado con esa imagen con esta etiqueta</string>
    <string name="ht11">La etiqueta footer representa el pie de un documento o sección. La información que se suele añadir en este bloque es el autor del documento, enlaces a contenido relacionado, información de copyright, avisos legales, etc.Igualmente podremos agregar al pie información de contacto.</string>
    <string name="ht12">¿Quieres crear tu sitio web?</string>
    <string name="c1">¿Qué es css3?</string>
    <string name="ct1">CSS significa Cascade Style Sheets, también llamado Hojas de Estilo en Cascada. CSS3 es un lenguaje de marcado que se emplea para dar formato a un sitio web. Es decir, funciona en conjunto con los archivos HTML. Por esta razón, para crear un sitio web debes saber tanto HTML como CSS.</string>
    <string name="c2">Conectando CSS a HTML</string>
    <string name="ct2">Hay tres maneras de conectar un archivo de css a html5, la primera es crear un archivo en la misma carpeta donde tiene el archivo html y colocar una etiqueta link para conectar los archivos y empezar a dar el diseño. El segundo es crear un archivo style en html dentro del Head y dar estilo desde allí. En la tercera debes colocarle el atributo style y darle desde estilo allí</string>
    <string name="c3">Selector global: *</string>
    <string name="ct3">El selector global aplica sus estilos a todos los elementos HTML del documento, sin importar el tipo de etiqueta, clase, id o su ascendencia, descendencia. Es un asterisco (*), y hay que tener cuidado con su uso porque afecta a todos los elementos sin distinción (incluido el body), y esto puede repercutir en el rendimiento general del proyecto.</string>
    <string name="c4">Selector de elemento: h1,section, article, img, etc</string>
    <string name="ct4">Es el selector más común, que identifica directamente a las etiquetas HTML. Los estilos se aplican a todos los elementos mencionados. En el siguiente ejemplo, vemos cómo aplicamos un fondo gris a todas las capas “div“.</string>
    <string name="c5">Selector de clases o identificadores: . , #</string>
    <string name="ct5">El selector de clase aplica sus estilos a todos los elementos HTML que incluyan dicho nombre de clase. Para declarar este selector CSS incluimos el nombre de clase precedido de un punto (.). El selector de identificador (id) se simbolizar con # y tiene semejanza a la clase(.).</string>
    <string name="c6"><![CDATA[Selector de hijos directos: elementoA > elementoB]]></string>
    <string name="ct6">Este selector permite aplicar estilos a los elementos B contenidos en elementos A, siempre y cuando sean descendientes directos.  En este caso section es el padre de article o sea que article esta dentro de section.</string>
    <string name="c7">Pseudo clases :hover, :link, :visited, :active</string>
    <string name="ct7">Sin duda estas son las pseudo clases más conocidas, y aunque :hover se puede aplicar a múltiples elementos, todas ellas se suelen utilizar para aplicar diferentes estilos a los enlaces para los estados “sobre”, “sin visitar”, “visitado” y “activo” (al hacer click).</string>
    <string name="c8">¿Quieres darle diseño a tu pagina web?</string>
    <string name="b1">¿Qué es Bootstrap?</string>
    <string name="ma1">Software Requerido</string>
    <string name="mat1">Como instalar sublime text 3 y xampp</string>
    <string name="mat2">Página de Sublime text 3</string>
    <string name="mat3">Página de Xampp</string>
    <string name="mat4">Plugins</string>
    <string name="plu1">Plugin Instalados en \nmi curso</string>
    <string name="plu2">Los mas usados</string>
    <string name="plu3">Página web</string>
    <string name="red1">Iniciar con redes sociales</string>
    <string name="olv1">olvidaste la contraseña</string>
    <string name="user">Informacion del usuario</string>
</resources>