<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.juanda.jdvpl.registro">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/fonre"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="93dp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E1000000"
       >
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageViewuser"
            android:layout_width="120dp"
            android:layout_height="115dp"
            android:scaleType="fitCenter"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:src="@drawable/sss" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageViewuser"
            android:layout_margin="20dp"
            android:layout_centerHorizontal="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regnom"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/apellido"
                android:inputType="textCapWords"
                android:textSize="15sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/regcor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/correo1"
                        android:inputType="textEmailAddress"
                        android:textSize="15sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/regcon"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:hint="@string/contraseña1"
                            android:inputType="textPassword"
                            android:textSize="15sp" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:passwordToggleEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/regconcon"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/confirmar_contrase_a"
                                android:inputType="textPassword"
                                android:textSize="15sp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </com.google.android.material.textfield.TextInputLayout>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/regape"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/nombre"
                    android:textSize="15sp"
                    android:inputType="textCapWords"/>

            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnregistarreg"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_redonreg"
            android:padding="10dp"
            android:text="@string/registrar"
            android:textColor="#F1ECEC"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@+id/textInputLayout1"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
             />
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
           android:layout_below="@+id/textInputLayout1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:padding="10dp"
           android:onClick="yatengo"
            android:id="@+id/btnyatengocuenta"
            android:text="@string/ya_tengo_cuenta"
            android:textColor="#FFC107"
            android:textSize="23sp"
            android:textStyle="bold"
            android:layout_below="@+id/progressBar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            />


    </RelativeLayout>
</androidx.core.widget.NestedScrollView>


    </RelativeLayout>

</RelativeLayout>